--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.datasource.password=1234
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
 
