--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
-
+spring.mvc.static-path-pattern=/static/**
+spring.resources.static-locations=classpath:/static/
