--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.79",
+    "@types/react-day-picker": "^5.3.0",
     "@types/react-dom": "^18.2.25",
     "@types/styled-components": "^5.1.34",
     "@types/yup": "^0.32.0"
