--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@types/date-fns": "^2.6.0",
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "polished": "^4.3.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
@@ -54,6 +56,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.79",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-day-picker": "^5.3.0",
     "@types/react-dom": "^18.2.25",
     "@types/styled-components": "^5.1.34",
